Bug 36772 - UI: Sheet tabs appear too small because LibreOffice has problems with certain themes or does not force a minimim hight for tabs
Summary: UI: Sheet tabs appear too small because LibreOffice has problems with certai...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0
Keywords:
: 39013 58748 66153 71702 82036 92549 (view as bug list)
Depends on:
Blocks: Sheet-Tabs-Bar
  Show dependency treegraph
 
Reported: 2011-05-02 07:30 UTC by Cyril Arnaud
Modified: 2020-04-13 05:25 UTC (History)
17 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (38.69 KB, image/png)
2011-05-02 07:30 UTC, Cyril Arnaud
Details
Calc 3.3.4 on Ubuntu 11.04 (56.57 KB, image/png)
2011-10-09 13:52 UTC, Jeroen
Details
Ubuntu 10.04 + Gnome and Crunchbang 11 + Openbox screenshots. (106.28 KB, application/zip)
2013-05-28 14:13 UTC, Owen Genat (retired)
Details
Libre Calc v4.0.1.4 fullscreen screenshot small sheet tab (153.93 KB, image/jpeg)
2013-08-02 03:59 UTC, Alfredo P.
Details
Proposal of new tab look (1.03 MB, image/png)
2014-02-01 16:52 UTC, Tin Man
Details
Tabs and scrollbar each in own row (4.42 KB, image/png)
2014-08-25 20:24 UTC, Tomaz Vajngerl
Details
Plus button doesn't show in Right-to-Left sheet view (36.89 KB, image/png)
2014-11-05 11:48 UTC, Ahmad Harthi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cyril Arnaud 2011-05-02 07:30:04 UTC
Created attachment 46254 [details]
Screenshot

When opening a Calc window, the sheet tabs are too small for being read properly, and I didn't find any way to change the size. (see screenshot attached)
Comment 1 Rainer Bielefeld Retired 2011-05-02 10:19:46 UTC
NOT reproducible with "LibreOffice 3.4Beta3  – WIN7  Home Premium  (64bit) German UI [DEV300m103 (Build:3)]"

@Cyril Arnaud:
Please contribute all available information concerning your Linux distribution / version and your LibO download files.
Comment 2 Cyril Arnaud 2011-05-02 14:08:46 UTC
Linux distribution : Ubuntu Natty
LO Version: 1:3.3.2-1ubuntu4
(default version for Natty)
Comment 3 Cyril Arnaud 2011-05-11 06:42:27 UTC
The problem is not related to Libreoffice but to the particular theme I was using (Elementary).
I'll test a bit more and report the bug to the Elementary team
Comment 4 Cyril Arnaud 2011-05-11 07:10:26 UTC
It seems that the problem is due to a the fact that libreoffice does't respect the gtk theme under a certain scrollbar height.
So the bug should appear on any gtk theme that has small scrollbars I guess.
Comment 5 Jeroen 2011-10-09 13:50:03 UTC
I've the same problem on Ubuntu 10.04 with Unity. 
The tabs are very small compared to e.g. the icons in the toolbar. You might even say that the tabs are rather ugly. Note that this is not an issue on the Windows version.
The text in the tabs is hard to read, the navigation buttons at the left are also too small.
Comment 6 Jeroen 2011-10-09 13:52:43 UTC
Created attachment 52157 [details]
Calc 3.3.4 on Ubuntu 11.04
Comment 7 Owen Genat (retired) 2013-05-28 13:56:32 UTC
*** Bug 39013 has been marked as a duplicate of this bug. ***
Comment 8 Owen Genat (retired) 2013-05-28 14:13:09 UTC
Created attachment 79899 [details]
Ubuntu 10.04 + Gnome and Crunchbang 11 + Openbox screenshots.

Whether this is a bug or an enhancement request I will leave to the original reporter and developers. It appears from the reports here and in bug #39013, that the bug side of things relates to scrollbar packages and certain gtk themes adversely affecting the tab size. In both bug #39013 and this AskLO question:

http://ask.libreoffice.org/en/question/15327/how-to-resize-worksheet-tab-vertically-in-calc-40n/?answer=18195#post-id-18195

...there is a desire to be able to make the sheet tabs larger, which would seem an enhancement request. I am attaching a couple of screenshots purely for comparison:

- LO v3.5.7.2 running under Ubuntu 10.04 x86_64
- LO v4.0.3.3 running under Crunchbang 11 x86_64

Neither appear to exhibit unusually small sheet tab size (as demonstrated in this bug), although the size is not overly large either (especially when compared with the Future State UI attachment in bug #39013).
Comment 9 Alfredo P. 2013-08-02 03:59:51 UTC
Created attachment 83498 [details]
Libre Calc v4.0.1.4 fullscreen screenshot small sheet tab
Comment 10 Alfredo P. 2013-08-02 04:33:12 UTC
I am experiencing the same problem with the sheet tabs being so small that I can not read them. I recently removed and installed the update to v4.0.1.4 and am still having the issue. I verified that I do not have overlay-scrollbar installed. I am not running the Oxygen theme but the default Lubuntu theme.

screenshot included in attachment.
https://bugs.freedesktop.org/attachment.cgi?id=83498

SYS INFO:

Toshiba Satellite A135-S4427
Lubuntu 13.04 (raring)
GNOME: 3.6.3
Kernel: 3.8.0-27
Xorg: 1.13.3

Display settings:
1200x800
Comment 11 Adolfo Jayme Barrientos 2013-11-18 03:39:22 UTC
*** Bug 58748 has been marked as a duplicate of this bug. ***
Comment 12 Adolfo Jayme Barrientos 2013-11-18 03:39:25 UTC
*** Bug 66153 has been marked as a duplicate of this bug. ***
Comment 13 Adolfo Jayme Barrientos 2013-11-18 03:39:37 UTC
*** Bug 71702 has been marked as a duplicate of this bug. ***
Comment 14 chris 2013-11-18 04:04:57 UTC
How about adding a minimum-height value or min-textsize value to the ui to prevent this problem? That would help to make the tabs readable again.
Comment 15 Tin Man 2014-02-01 16:52:04 UTC
Created attachment 93176 [details]
Proposal of new tab look

The ideal solution would be to have tabs in a separate row.
Aside from being able to display the scrollbar as it is intended to be displayed, this would also improve the problematic tab scrolling problem by increasing the space for tabs. Tab switching can be very painful in Draw, as it's quite common for vector drawings to have numerous layers.

It also presents an opportunity to redesign the tabs -- see attached mockup.
Comment 16 Cor Nouws 2014-02-03 11:03:48 UTC
(In reply to comment #15)
> Created attachment 93176 [details]
> Proposal of new tab look


I do not like that proposal. Sorry.
Note that the reported problem is related to a certain theme and that LibreOffice does not force to show a minimum hight for the tabs.
So I (and many others) do not have the problem. 
Cor
Comment 17 bugs.freedesktop 2014-02-03 16:47:53 UTC
(In reply to comment #16)
> (In reply to comment #15)
> > Created attachment 93176 [details]
> > Proposal of new tab look
> 
> 
> I do not like that proposal. Sorry.
> Note that the reported problem is related to a certain theme and that
> LibreOffice does not force to show a minimum hight for the tabs.
> So I (and many others) do not have the problem. 
> Cor

lol?

I am sorry but I actually dont like your comment -.- 
The problem actually IS because the height of the sheet-tabs is bound to the scrollbar height. 

That should not be like this because u make theming difficult!
Making an UI-Feature depending on another non-related Ui-Feature is in my eyes not very good coding...

In fact I do not use a very-special theme. Instead of I use the gnome shell default theme... 
So this might be a problem for many users...

I am sorry but its quite frustrating how problems are dealed with... :( 

The proposal from Mirek2 is quite good and should be implemented asap!
Comment 18 Owen Genat (retired) 2014-02-07 22:23:11 UTC
(In reply to comment #15)
> Proposal of new tab look
> 
> The ideal solution would be to have tabs in a separate row.

Agreed. I feel this is a pragmatic design solution. I have no idea how easy it would be to implement, but it at least indicates the direction to move in.
Comment 19 Tin Man 2014-03-06 23:10:17 UTC
Here's a new mockup, one which fits the Tango aesthetic more and carries across its function (tabs) better, though would probably be harder to implement: https://wiki.documentfoundation.org/images/7/73/Calctabs.png .
Alternatively, we could go for a copy of Gnome's new tabs, which fit in with our icons as well.

(As per our UX guidelines, non-natively themed elements should be styled based on the icon set.)
Comment 20 Urmas 2014-03-07 15:24:00 UTC
lrn2crop?
Comment 21 mdrisser 2014-06-17 23:58:30 UTC
This is an issue on Windows 8.1 as well. No way to change the theme, so there needs to be another resolution.
Comment 22 Joel Madero 2014-08-05 23:48:48 UTC
REOPENED is reserved for a bug that:

1. a developer has marked as FIXED;
2. a developer is assigned to the bug that is marked as FIXED;

In this case the bug report was never independently confirmed so correct status is UNCONFIRMED. Thanks!
Comment 23 Owen Genat (retired) 2014-08-10 03:52:23 UTC
(In reply to comment #22)
> In this case the bug report was never independently confirmed ...

Comment 8 (AskLO link), comment 9 (with attachment) and comment 10 offer confirmation, all separate from the OP. Status set to NEW. Apologies for not doing this earlier. As per comment 8 I am still uncertain whether this is a bug report (GTK theme issue) or a request for enhancement (proposal by Mirek).
Comment 24 Owen Genat (retired) 2014-08-10 03:54:13 UTC
(In reply to comment #21)
> This is an issue on Windows 8.1 as well.

Platform set to x86 / All, although it would be good if a screenshot showing the issue under Windows 8.1 could be attached.
Comment 25 Commit Notification 2014-08-25 19:33:08 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1d1d1c62caf2ee6a96946e96d782e03f3ef80439

fdo#36772 Move the scrollbar and sheet tabs in a separate row.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 26 Tomaz Vajngerl 2014-08-25 20:03:38 UTC
Hi,

I just got sick of tiny tabs (especially with a new monitor) so I moved scrollbar and sheet tab bar each into its own row. Comments?

Regards, Tomaž
Comment 27 Samuel Mehrbrodt 2014-08-25 20:05:17 UTC
Tomaz, you are my hero for today :)
A few hours ago I though about fixin this bug, but then digged into other areas.
Glad you fixed it :)

Can you provide a screenshot please?
Comment 28 Tomaz Vajngerl 2014-08-25 20:24:30 UTC
Created attachment 105253 [details]
Tabs and scrollbar each in own row
Comment 29 Tomaz Vajngerl 2014-08-25 20:29:47 UTC
I have also made some visual changes to the tabs (rectangular, more plain look) but that should go into a new bug report I guess. 

Also this change is only for Calc for now..
Comment 30 Samuel Mehrbrodt 2014-08-25 20:31:36 UTC
Nice job! :)
If you still want to work on this, some suggestions for further improvements:

* The buttons with the arrows pointing to the right could be moved on the right side of the screen
* All those buttons only need to be shown when the tabs don't fit in the available space

Btw, in Draw there is the same problem (as you might know) - not sure if we have a bug report for it.
Comment 31 Samuel Mehrbrodt 2014-08-25 20:40:29 UTC
*** Bug 82036 has been marked as a duplicate of this bug. ***
Comment 32 Peter Nunn 2014-08-26 06:31:19 UTC
I can confirm that master 4.4.0.0.alpha0+ now no longer shows the problem. Thanks. Look forward to this rolling into the released version.

P.
Comment 33 Tin Man 2014-08-28 16:23:50 UTC
(In reply to comment #28)
> Created attachment 105253 [details]
> Tabs and scrollbar each in own row

Thanks a ton! :)
Comment 34 Adolfo Jayme Barrientos 2014-09-18 16:13:39 UTC
Changed for Draw as well (thanks Samuel!): http://cgit.freedesktop.org/libreoffice/core/commit/?id=20800ebc7ef05637134c3915798e13a272663341
Comment 35 Ahmad Harthi 2014-11-05 11:48:54 UTC
Created attachment 108949 [details]
Plus button doesn't show in Right-to-Left sheet view

Thank you Thomas, tabs are much more better now :)

There are a small problem when you switch the sheets to Right-to-Left view, the + button disappears as seen in the screen-shot. Do we need a new bug report?
Comment 36 Tomaz Vajngerl 2014-11-05 11:55:38 UTC
Yes, a new bug report would be better. And add this bug as reference and add me as CC.
Comment 37 Ahmad Harthi 2014-11-05 11:57:42 UTC
(In reply to Tomaz Vajngerl from comment #36)
> Yes, a new bug report would be better. And add this bug as reference and add
> me as CC.

It turns out this is a regression, please see fdo#56970

Thanks a lot :)
Comment 38 Mike §chinagl 2014-12-20 21:55:47 UTC
This bug fix comes with LibreOffice 4.4 (release notes https://wiki.documentfoundation.org/ReleaseNotes/4.4) 


Sheet tabs (Calc) and layer tabs (Draw) were moved to an independent row and are no longer displayed next to the horizontal scrollbar. As many visual styles under Linux (in addition to the default OS X configuration) use very thin scrollbars, these rendered the tabs too small to be clickable and, most importantly, readable.

See a graphic of the work:
https://wiki.documentfoundation.org/File:Tabs_calc_before.png
https://wiki.documentfoundation.org/File:Tabs_new_row.png
Comment 39 Maxim Monastirsky 2015-07-05 12:18:08 UTC
*** Bug 92549 has been marked as a duplicate of this bug. ***