fdo#36772 Move the scrollbar and sheet tabs in a separate row.

Change-Id: I57d891d9f6e89dafb4840a577ba55baa734fdcc2